--- a/src/app/features/explore/explore.component.scss
+++ b/src/app/features/explore/explore.component.scss
@@ -29,18 +29,6 @@
         align-items: center;
         margin: 30px 0;
 
-        .image-wrapper {
-          border-radius: 50%;
-          overflow: hidden;
-          background-color: aliceblue;
-          height: 40px;
-          width: 40px;
-          margin-right: 10px;
-          img {
-            height: 100%;
-          }
-        }
-
         &-info {
           display: flex;
           flex-direction: column;
@@ -81,6 +69,19 @@
           font-weight: 700;
           display: block;
           color: var(--primary-orange);
+        }
+
+        .image-wrapper {
+          border-radius: 20px;
+          overflow: hidden;
+          background-color: aliceblue;
+          border: 1px solid var(--border-color);
+          height: 100px;
+          width: 100px;
+          margin-bottom: 20px;
+          img {
+            height: 100%;
+          }
         }
       }
     }
