--- a/src/app/features/profile/profile.component.scss
+++ b/src/app/features/profile/profile.component.scss
@@ -180,6 +180,7 @@
         border-style: solid;
         border-color: var(--primary-grey);
         border-radius: 8px;
+        cursor: pointer;
 
         &-title {
           display: flex;
@@ -287,6 +288,34 @@
         height: 25px;
       }
 
+      .service-schedule-day {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding-top: 15px;
+        border-radius: 8px;
+
+        &.disabled {
+          opacity: 0.7;
+        }
+
+        &-hour {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: white;
+          padding: 10px;
+          width: 100%;
+          border-radius: 6px;
+        }
+        .title-item {
+          font-size: 1.2rem;
+          padding-bottom: 10px;
+          margin-bottom: 10px;
+          border-bottom: 1px solid var(--benup-colors-border);
+        }
+      }
+
       &-reservations {
         display: flex;
         align-items: center;
@@ -301,8 +330,6 @@
         margin: 10px 10px 10px 10px;
       }
     }
-
-
   }
 
   h3 {
