--- a/src/app/features/service/service.component.scss
+++ b/src/app/features/service/service.component.scss
@@ -78,10 +78,8 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      min-height: 300px;
-      padding: 15px;
+      padding-top: 15px;
       border-radius: 8px;
-      background-color: var(--background-grey);
 
       &.disabled {
         opacity: 0.7;
@@ -90,17 +88,18 @@
       &-hour {
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         background-color: white;
         padding: 10px;
         width: 100%;
         margin-bottom: 10px;
         border-radius: 6px;
       }
-      h3 {
-        text-align: center;
-        color: var(--primary-orange);
-        font-weight: 600;
+      .title-item {
+        font-size: 1.2rem;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+        border-bottom: 1px solid var(--benup-colors-border);
       }
     }
 
